tests/samples/positive/control_flow/for_in_protocol_trait_direct.ax
module for_in_protocol_trait_direct;

trait IterI32 {
    fn has_next(self: &mut Self) -> bool;
    fn next(self: &mut Self) -> i32;
}

struct Counter {
    current: i32;
    end: i32;
}

impl IterI32 for Counter {
    fn has_next(self: &mut Counter) -> bool {
        return self.current < self.end;
    }

    fn next(self: &mut Counter) -> i32 {
        let value: i32 = self.current;
        self.current = self.current + 1;
        return value;
    }
}

fn main() -> i32 {
    let counter: Counter = Counter { current: 0, end: 5 };
    var total: i32 = 0;
    for value in counter {
        total = total + value;
    }
    return total - 10;
}
